<h1 id='change-logs'>Change Logs</h1><h2 id='2022'>2022</h2><h3 id='2022-03-01'>2022-03-01</h3>
<p>Upbit OPEN API 인증 방식 테스트 완료</p>
<h3 id='2022-02-06'>2022-02-06</h3>
<p>Upbit Client Released: v1.3.1.0</p>

<ul>
<li>Update Upbit OPEN API Version 1.3.1</li>
<li><a href="https://docs.upbit.com/changelog/open-api-%EB%B3%80%EA%B2%BD%EC%82%AC%ED%95%AD-%EC%95%88%EB%82%B4">Upbit OPEN API 변경사항 안내</a>를 참고하세요.</li>
<li>2022년 3월부터 인증방식 중 JWT 서명방식 지원 사항이 변경될 수 있기 때문에 3월 이후 인증절차 알고리즘이 변경될 수 있습니다.</li>
</ul>
<h3 id='2022-01-14'>2022-01-14</h3>
<p>Upbit Client Released: v1.2.2.4</p>

<ul>
<li>Python Websocket Package 버전을 Release 하면서 v10.1 버전으로 반영</li>
<li>Websocket Client 예제 코드 수정</li>
<li>성능 개편 및 소스 코드 리팩토링</li>
</ul>
<h2 id='2021'>2021</h2><h3 id='2021-12-06'>2021-12-06</h3>
<p>Upbit Client Released: v1.2.2.2</p>

<ul>
<li>RestSharp 버전 업데이트: v105.1.0 -&gt; 106.11.8-alpha.0.13</li>
<li>Python urllib3 Package 버전 업데이트: v1.26.4 -&gt; v1.26.5</li>
<li>그 외 원활한 형상관리를 위해 GitHub Repository에 Dependabot alerts와 CodeQL(Code scanning alerts) Action을 추가하였습니다.</li>
</ul>
<h3 id='2021-12-01'>2021-12-01</h3>
<p>Update Client Released: v1.2.2.1</p>

<ul>
<li>Upbit OPEN API 버전 1.2.2 업데이트 반영</li>
<li>Python Websocket Package 버전 업데이트: v8.1 -&gt; v10.1</li>
<li>아래와 같은 이유 때문에 기존의 Python websocket 패키지 버전을 업데이트 했음을 참고하시기 바랍니다. <strong>전체 코드상에는 지장이 없습니다.</strong></li>
<li><em>Python Websocket Package Issues: The aaugustin websockets library before 9.1 for Python has an Observable Timing Discrepancy on servers when HTTP Basic Authentication is enabled with basic_auth_protocol_factory(credentials=...). An attacker may be able to guess a password via a timing attack.</em></li>
<li>UpbitWebSocket 클래스에 <code>ping</code> 메소드 추가</li>
<li>Websocket의 응답 형식에서 <code>deprecated</code> 된 필드들이 삭제됩니다.</li>
<li>Websocket Ticker(현재가) 응답의 <code>trade_status</code> , <code>market_state_for_ios</code> 필드 제거</li>