@@ -641,7 +641,14 @@
 <p><img alt="uJhin's BTC" src="https://img.shields.io/badge/BTC-3NVw2seiTQddGQwc1apqudKxuTqebpyL3s-blue?style=flat-square&logo=bitcoin">
 <br/>
 <img alt="uJhin's ETH" src="https://img.shields.io/badge/ETH-0x60dd373f59862d9df776596889b997e24bee42eb-blue?style=flat-square&logo=ethereum"></p>
-<h1 id='change-logs'>Change Logs</h1><h2 id='2022'>2022</h2><h3 id='2022-03-01'>2022-03-01</h3>
+<h1 id='change-logs'>Change Logs</h1><h2 id='2022'>2022</h2><h3 id='2022-06-07'>2022-06-07</h3>
+<p>Upbit Client released: v1.3.1.1</p>
+
+<ul>
+<li>PyJWT Version Update v2.4.0</li>
+<li>자세한 내용은 <a href="https://github.com/uJhin/upbit-client/pull/43#issuecomment-1148090773">여기</a>를 참고해주시기 바랍니다.</li>
+</ul>
+<h3 id='2022-03-01'>2022-03-01</h3>
 <p>Upbit OPEN API 인증 방식 테스트 완료</p>
 <h3 id='2022-02-06'>2022-02-06</h3>
 <p>Upbit Client Released: v1.3.1.0</p>
